--- a/MoviesDB/angular.json
+++ b/MoviesDB/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "MoviesDB": {
+    "galloflix": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/movies-db",
+            "outputPath": "dist/galloflix",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
@@ -59,10 +59,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "buildTarget": "MoviesDB:build:production"
+              "buildTarget": "galloflix:build:production"
             },
             "development": {
-              "buildTarget": "MoviesDB:build:development"
+              "buildTarget": "galloflix:build:development"
             }
           },
           "defaultConfiguration": "development"
